[gd_scene load_steps=7 format=2]

[ext_resource path="res://GreyCoinSmall.png" type="Texture" id=1]
[ext_resource path="res://Coin.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="CircleShape2D" id=2]
radius = 10.7063

[sub_resource type="Animation" id=3]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Coin" type="Area2D"]
scale = Vector2( 1.09052, 1.09052 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="."]
margin_left = -11.0
margin_top = -11.0
margin_right = 11.0
margin_bottom = 11.0
mouse_default_cursor_shape = 2
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CoinSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FadeInAnimation" type="AnimationPlayer" parent="."]
autoplay = "FadeIn"
anims/FadeIn = SubResource( 3 )

[node name="IdleAnimation" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
